# Ray-tracer

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  compileAndRun.sh  compileAndTest.sh  main.cpp  notes.txt  planets.json  scene.json
libs/: Color.hpp  Logger.cpp  Logger.hpp
libs/jsoncpp/: jsoncpp.cpp
libs/jsoncpp/json/: json.h
src/: CMakeLists.txt  Intro.hpp  Pixel.hpp  Raytracer.cpp  Raytracer.hpp  Version.hpp
src/core/: Camera.cpp  Camera.hpp  Color.cpp  Color.hpp  Material.cpp  Material.hpp  Object.cpp  Object.hpp  Point.cpp  Point.hpp  Ray.cpp  Ray.hpp  Texture.cpp  Texture.hpp  Vector.cpp  Vector.hpp
src/editor/: Editor.cpp  Editor.hpp
src/scene/: Loader.cpp  Loader.hpp  Scene.cpp  Scene.hpp
src/shape/: Light.cpp  Light.hpp  Plane.cpp  Plane.hpp  Sphere.cpp  Sphere.hpp
test/: CMakeLists.txt  dummy.cpp  main.cpp
test/core/: ColorTests.cpp  PointTests.cpp  RayTests.cpp  VectorTests.cpp
test/gtest/: CMakeLists.txt
textures/: README.md
